<?xml version="1.0"?>
<package format="2">
  <name>hsrb_mapping</name>
  <version>0.5.0</version>
  <description>Launch and config files for navigation with HSR-B.</description>

  <maintainer email="kazuhito_tanaka@mail.toyota.co.jp">Kazuhito Tanaka</maintainer>
  <author email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai</author>
  <license>HSR Software License for Community Software A</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gmapping</depend>
  <depend>hector_mapping</depend>
  <depend>map_server</depend>
  <depend>slam_karto</depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>imagemagick</test_depend>
  <test_depend>tmc_gazebo_worlds</test_depend>
  <test_depend>rviz</test_depend>
  <test_depend>joint_state_publisher</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hsrb_common_config</test_depend>
  <test_depend>hsrb_gazebo_bringup</test_depend>
  <test_depend>tf</test_depend>

</package>
